Fix closing form & global-reach style

--- a/src/app/pages/global-reach/schoolmap/schoolmap.html
+++ b/src/app/pages/global-reach/schoolmap/schoolmap.html
@@ -1,5 +1,5 @@
 <template args="model">
-    <div class="content">
+    <div class="content schoolmapdiv">
         <div class="main-content">
             <div class="txthead">{model.heading}</div>
             <div class="txtbdy">{model.description}</div>
