--- a/src/app/pages/separatemap/testimonial-form/testimonial-form.html
+++ b/src/app/pages/separatemap/testimonial-form/testimonial-form.html
@@ -8,7 +8,7 @@
         <input type="hidden" name="first_name" value="{model.firstName}">
         <input type="hidden" name="last_name" value="{model.lastName}">
         <input type="hidden" name="email" value="{model.email}">
-        <input type="hidden" name="company" value="{model.school}">
+        <input type="hidden" name="00NU0000005VkYv" value="{model.school}">
         <div class="book-selector" skip="true"></div>
         <div class="control-group">
             <label class="field-label">Your testimonial</label>
