--- a/src/app/components/dialog/dialog.scss
+++ b/src/app/components/dialog/dialog.scss
@@ -45,7 +45,7 @@ dialog {
         border: 0;
         color: text-color(helper);
         margin: 0;
-        padding: 0;
+        padding: 0.5rem 1rem;
 
         @include width-up-to($phone-max) {
             align-self: start;
