--- a/src/app/components/get-this-title/get-this-title.html
+++ b/src/app/components/get-this-title/get-this-title.html
@@ -34,6 +34,15 @@
                     </span>
                 </a>
             </div>
+            <div class="option">
+                <a href="/" class="show-study-edge"
+                    tabindex="{model.submenu === '' ? 0 : -1}">
+                    <span class="fas fa-mobile-alt"></span>
+                    <span class="text">
+                        Download the app
+                    </span>
+                </a>
+            </div>
             <div if="model.bookshareLink" class="option">
                 <a href="{model.bookshareLink}"
                     tabindex="{model.submenu === '' ? 0 : -1}">
