Control display of Study Edge link
If the general page `study-edge` is published, the link will show. If it is not published, it will not show.

--- a/src/app/components/get-this-title/get-this-title.html
+++ b/src/app/components/get-this-title/get-this-title.html
@@ -34,7 +34,7 @@
                     </span>
                 </a>
             </div>
-            <div class="option">
+            <div if="model.studyEdge" class="option">
                 <a href="/" class="show-study-edge"
                     tabindex="{model.submenu === '' ? 0 : -1}">
                     <span class="fas fa-mobile-alt"></span>
