--- a/src/app/components/shell/cookie-notice/cookie-notice.html
+++ b/src/app/components/shell/cookie-notice/cookie-notice.html
@@ -1,6 +1,6 @@
 <div class="message">
-    This site uses cookies to optimize your experience on our platform.
-    By continuing to use this site, you agree to our use of cookies.
+    We use cookies to optimize your experience on our website. By continuing on the
+    website, you are agreeing to our use of cookies. You can find more information,
+    including how to opt out, in our <a href="/privacy">Privacy Policy</a>.
 </div>
 <button type="button" class="primary">Got it!</button>
-<a class="btn" href="/privacy">Learn more</a>
