Fix mobile menu styling
Restore hamburger-to-x animation

--- a/src/app/components/shell/header/header.scss
+++ b/src/app/components/shell/header/header.scss
@@ -1,6 +1,6 @@
 @import 'pattern-library/core/pattern-library/headers';
 
-$button-size: 2.8rem;
+$button-size: 1.6rem;
 
 .page-header {
     align-items: center;
@@ -187,23 +187,19 @@ $button-size: 2.8rem;
     }
 
     .expand {
-        align-items: center;
         appearance: none;
         background: transparent;
-        border-radius: none;
         border: 0;
+        border-radius: none;
         box-shadow: none;
-        color: text-color(button-bar);
-        display: flex;
-        height: 4.8rem;
-        justify-content: center;
+        cursor: pointer;
         order: 2;
         padding: 0;
         position: absolute;
-        right: 0;
-        top: 0;
+        right: 1.6rem;
+        top: 1.2rem;
+        transition: 0.3s;
         user-select: none;
-        width: 4.8rem;
 
         @include wider-than($tablet-max) {
             display: none;
@@ -215,21 +211,63 @@ $button-size: 2.8rem;
             }
         }
 
+        &[aria-expanded="true"] {
+            position: absolute;
+            right: 2rem;
+            top: 0;
+        }
+
         &:hover,
         &:focus,
         &:active {
             outline: none;
         }
 
-        &[aria-expanded="false"] {
-            .put-away-icon {
-                display: none;
-            }
-        }
+        span {
+            // create middle line
+            background: os-color(gray);
+            display: inline-block;
+            height: 0.2rem;
+            position: relative;
+            transition: background 0.3s 0.2s ease;
+            width: $button-size;
 
-        &[aria-expanded="true"] {
-            .menu-icon {
-                display: none;
+            // create the upper and lower lines as pseudo-elements of the middle line
+            &::before,
+            &::after {
+                background: os-color(gray);
+                content: '';
+                display: inline-block;
+                height: 0.2rem;
+                left: 0;
+                position: absolute;
+                // set transform origin back to center
+                transform-origin: 50% 50%;
+                transition: top 0.3s 0.2s ease, transform 0.3s ease;
+                width: $button-size;
+            }
+
+            &::before { top: $button-size / 3; }
+            &::after { top: -$button-size / 3; }
+
+            @at-root .active#{&} {
+                background: transparent;
+                transition: background 0.3s 0s ease;
+
+                &::before,
+                &::after {
+                    top: 0;
+                    transition: top 0.3s ease, transform 0.3s 0.2s ease;
+                    width: $button-size;
+                }
+
+                &::before {
+                    transform: rotate3d(0, 0, 1, 45deg);
+                }
+
+                &::after {
+                    transform: rotate3d(0, 0, 1, -45deg);
+                }
             }
         }
     }
