--- a/src/app/components/shell/header/main-menu/main-menu.html
+++ b/src/app/components/shell/header/main-menu/main-menu.html
@@ -1,7 +1,7 @@
 <template args="model">
     <div if="model.trainingWheelActive" class="training-wheel-overlay"></div>
     <span class="logo-wrapper">
-        <span class="logo os-logo">
+        <span class="logo">
             <a href="/" aria-label="Home Page">
                 <img class="logo-color" src="/images/logo.svg" alt="OpenStax logo">
                 <img class="logo-white" src="/images/logo-white.svg" alt="OpenStax logo">
@@ -25,9 +25,7 @@
             </li>
         </if>
     </ul>
-    <button class="expand" aria-haspopup="true" aria-label="Toggle Meta Navigation Menu"
-        tabindex="0" aria-expanded="{model.headerActive}">
-      <i class="menu-icon fas fa-bars"></i>
-      <i class="put-away-icon fas fa-times"></i>
+    <button class="expand" aria-haspopup="true" aria-label="Toggle Meta Navigation Menu" tabindex="0">
+      <span></span>
     </button>
 </template>
