--- a/src/app/components/shell/cookie-notice/cookie-notice.scss
+++ b/src/app/components/shell/cookie-notice/cookie-notice.scss
@@ -8,7 +8,7 @@
     margin: $normal-margin;
     max-width: none;
     position: fixed;
-    width: calc(100vw - 3rem);
+    width: calc(100vw - 4.5rem); // Leaves room for scrollbar
 }
 
 .cookie-notice {
