Fixes that don't depend on changing CMS structure or items

--- a/src/app/pages/rover-3/banner/banner.html
+++ b/src/app/pages/rover-3/banner/banner.html
@@ -1,5 +1,5 @@
 <template args="model">
-    <a class="btn top-right medium blue" href="{model.accessLink}">{model.accessText}</a>
+    <a class="btn top-right blue" href="{model.accessLink}">{model.accessText}</a>
     <div class="accent"></div>
     <div class="boxed">
         <div class="two-columns">
