--- a/src/app/pages/rover-3/faq/faq.html
+++ b/src/app/pages/rover-3/faq/faq.html
@@ -9,6 +9,14 @@
                 </div>
                 <div class="answer {model.isOpen($item) ? '' : 'closed'}" data-html="questions[{$item}].answer"></div>
             </div>
+            <div class="qa">
+                <div class="question">
+                    <span>
+                        Get more answers on our
+                        <a href="https://openstax.secure.force.com/help">Support page</a>.
+                    </span>
+                </div>
+            </div>
         </div>
     </div>
     <div class="for-mobile to-top">
