--- a/src/app/pages/rover-3/faq/faq.scss
+++ b/src/app/pages/rover-3/faq/faq.scss
@@ -61,6 +61,10 @@
         padding: 1rem 0;
     }
 
+    a {
+        text-decoration: none;
+    }
+
     .answer {
         margin-bottom: $normal-margin;
         margin-left: 0.7rem;
