--- a/src/app/pages/rover-3/getting-started/getting-started.html
+++ b/src/app/pages/rover-3/getting-started/getting-started.html
@@ -15,4 +15,5 @@
         </div>
         <a class="btn blue large" href={model.moreUrl}>{model.moreText}</a>
     </div>
+    <img class="right-bottom" alt="" src="/images/rover-3/rover-profile.svg">
 </template>
