--- a/src/app/pages/rover-3/navigator/navigator.html
+++ b/src/app/pages/rover-3/navigator/navigator.html
@@ -1,6 +1,10 @@
 <template args="model">
-    <span class="label">{model.heading}</span>
-    <span each="sec in model" class="navigation-item {model.currentClass(sec.id)}" data-target-id="{sec.id}" role="button" tabindex="1">
-        {sec.heading}
-    </span>
+    <div class="line"></div>
+    <div class="content">
+        <span class="label">{model.heading}</span>
+        <span each="sec in model" class="navigation-item {model.currentClass(sec.id)}" data-target-id="{sec.id}" role="button" tabindex="1">
+            {sec.heading}
+        </span>
+    </div>
+    <div class="line"></div>
 </template>
