Style general pages
Just a few rules to keep things reasonably constrained.

--- a/src/app/pages/general/general.scss
+++ b/src/app/pages/general/general.scss
@@ -2,8 +2,6 @@
 
 .general.page {
 
-    margin: 4rem auto;
-    max-width: $content-max;
     width: 100%;
 
     > *,
@@ -13,13 +11,43 @@
 
     .block-heading {
         @include set-font(h1);
+
+        background-color: ui-color(white);
+        padding: 4rem $normal-margin;
+        position: relative;
+
+        @include wider-than($media-content-max) {
+            padding-left: calc(50vw - #{$content-max / 2 - $normal-margin});
+            padding-right: calc(50vw - #{$content-max / 2 - $normal-margin});
+        }
+
+        .strips {
+            bottom: 0;
+        }
     }
 
-    .block-heading,
-    .block-paragraph,
     .block-html {
+        margin: auto;
+        max-width: 100%;
+        padding: 2rem $normal-margin;
+        width: auto;
+
+        @include wider-than($media-content-max) {
+            max-width: $content-max;
+        }
+    }
+
+    .rich-text,
+    .block-paragraph {
+        // padding-left: calc(50vw - #{text-content-max / 2 - $normal-margin});
+        margin: auto;
         max-width: $text-content-max;
         width: 100%;
+    }
+
+    .block-paragraph {
+        padding-left: $normal-margin;
+        padding-right: $normal-margin;
     }
 
 }
