Use app store badges for Study Edge buttons

--- a/src/app/components/get-this-title/study-edge/study-edge.html
+++ b/src/app/components/get-this-title/study-edge/study-edge.html
@@ -5,7 +5,7 @@
          <b>OpenStax + SE</b> app page.
      </div>
      <div class="button-group">
-         <a class="btn apple" href="{model.appleLink}">Apple Store</a>
-         <a class="btn google" href="{model.googleLink}">Google Play Store</a>
+         <a class="badge" href="{model.appleLink}"><img src="{model.appleBadge}" alt="Apple App Store badge"></a>
+         <a class="badge" href="{model.googleLink}"><img class="padded" src="{model.googleBadge}" alt="Google Play Store badge"></a>
     </div>
 </template>
