--- a/src/app/components/get-this-title/study-edge/study-edge.html
+++ b/src/app/components/get-this-title/study-edge/study-edge.html
@@ -1,8 +1,7 @@
 <template args="model">
      <h1>You are now leaving the OpenStax website.</h1>
      <div class="text-block">
-         You are about to leave openstax.org to go to the
-         <b>OpenStax + SE</b> app page.
+         Get the <b>OpenStax + SE</b> app below.
      </div>
      <div class="button-group">
          <a class="badge" href="{model.appleLink}"><img src="{model.appleBadge}" alt="Apple App Store badge"></a>
