--- a/src/app/pages/rover-3/office-hours/office-hours.scss
+++ b/src/app/pages/rover-3/office-hours/office-hours.scss
@@ -29,6 +29,7 @@
 
             .bottom-border-container {
                 grid-column: 1 / 3;
+                margin-top: 16rem;
             }
         }
     }
