--- a/src/app/pages/details/phone-view/phone-view.scss
+++ b/src/app/pages/details/phone-view/phone-view.scss
@@ -8,6 +8,7 @@
 
         .get-the-book {
             background-color: ui-color(white);
+            border-radius: 0.2rem;
             padding: 1rem $normal-margin;
 
             .option {
