--- a/src/app/components/get-this-title/study-edge/study-edge.html
+++ b/src/app/components/get-this-title/study-edge/study-edge.html
@@ -1,11 +1,10 @@
 <template args="model">
      <h1>You are now leaving the OpenStax website.</h1>
      <div class="text-block">
-         You are about to leave openstax.org to go to the
-         <b>OpenStax + SE</b> app page.
+         Get the <b>OpenStax + SE</b> app below.
      </div>
      <div class="button-group">
-         <a class="btn apple" href="{model.appleLink}">Apple Store</a>
-         <a class="btn google" href="{model.googleLink}">Google Play Store</a>
+         <a class="badge" href="{model.appleLink}"><img src="{model.appleBadge}" alt="Apple App Store badge"></a>
+         <a class="badge" href="{model.googleLink}"><img class="padded" src="{model.googleBadge}" alt="Google Play Store badge"></a>
     </div>
 </template>
