--- a/src/app/pages/details/details-tab/details-tab.html
+++ b/src/app/pages/details/details-tab/details-tab.html
@@ -43,6 +43,14 @@
                 <h4>Publish Date:</h4>
                 {model.formattedPublishDate}
             </div>
+            <div class="loc-web-update-date" if="model.formattedWebUpdateDate">
+                <h4>Web Version Last Updated:</h4>
+                {model.formattedWebUpdateDate}
+            </div>
+            <div class="loc-pdf-update-date" if="model.formattedPDFUpdateDate">
+                <h4>PDF Version Last Updated:</h4>
+                {model.formattedPDFUpdateDate}
+            </div>
             <div class="loc-print-isbn" if="model.print_isbn_10 || model.print_isbn_13">
                 <h4>Print:</h4>
                 <div if="model.print_isbn_10">ISBN-10: {model.print_isbn_10}</div>
